Change package name

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start:dev": "npm run build && ng serve",
     "start": "ng serve",
     "build": "ng build",
+    "build:prd": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
