--- a/projects/angular-mentions/package.json
+++ b/projects/angular-mentions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-mentions",
+  "name": "@sontx/angular-mentions",
   "version": "1.4.0",
 
   "description": "Angular mentions for text fields.",
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dmacfarlane/angular-mentions.git"
+    "url": "https://github.com/sontx/angular-mentions"
   },
   "author": "Dan MacFarlane",
   "license": "MIT",
